--- a/test_css.css
+++ b/test_css.css
@@ -1,5 +1,5 @@
 body{
-background-color:navy;
+background-color:#0B3C5D;
 }
 p {
 font-family: "Times";
@@ -16,10 +16,14 @@ color: white
 }
 h3{
 font-weight: bold;
-color: red
+color: #D9B310
 }
 div{
 column-count: 2
+}
+table{
+  background-color: #328CC1 !important;
+  color: white !important
 }
 .column-left{
 float: left;
